force-app/main/default/objects/Data_table_Columns__c/Data_table_Columns__c.object-meta.xml
<CustomObject>
    <label>Data Table Column</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data table Columns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Table Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>