force-app/main/default/objects/Data_table_Columns__c/fields/editable__c.field-meta.xml
<CustomField>
    <fullName>editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>editable</label>
    <type>Checkbox</type>
</CustomField>