force-app/main/default/objects/Data_table_Columns__c/fields/fieldName__c.field-meta.xml
<CustomField>
    <fullName>fieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>fieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>