force-app/main/default/objects/Data_table_Columns__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>