force-app/main/default/objects/Data_table_Columns__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>